更改介面，調整出牌的限制

--- a/打殭屍.html
+++ b/打殭屍.html
@@ -91,6 +91,7 @@
             let cards = 0;
             let goal_num = 1;
             let card = 0;
+            let numbers = [];
 
             let clear = 0;
 
